feat: Personnel management improvements and PWA icon optimization
- Add manual personnel edit and delete functionality
- Fix settings page statistics with admin client
- Fix scheduled tasks role-based assignment for manual personnel
- Add invite code auto-fill from URL in register page
- Generate high-quality PWA icons (72x72 to 512x512)
- Add maskable icons for Android adaptive icons
- Add Apple Touch Icon and favicon
- Create PWA manifest with app shortcuts
- Add icon generation script (npm run generate-icons)

--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
+    "generate-icons": "node scripts/generate-icons.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["personnel-management", "ai-analysis", "next.js", "supabase", "pwa"],
+  "keywords": [
+    "personnel-management",
+    "ai-analysis",
+    "next.js",
+    "supabase",
+    "pwa"
+  ],
   "author": "Eksen AI Team",
   "license": "MIT",
   "repository": {
@@ -33,6 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "sharp": "^0.34.4",
     "tailwindcss": "^3.4.1"
   }
 }
